fixed volume visibility issues, made all ui more visible

--- a/vallek-youtube.user.css
+++ b/vallek-youtube.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           youtube.com - 8/24/2024, 10:15:51 PM
 @namespace      github.com/openstyles/stylus
-@version        1.3.4
+@version        1.3.5
 @description    Hide annoying shit on youtube
 @author         Vallek
 ==/UserStyle== */
@@ -16,14 +16,28 @@
   .ytp-next-button {
     display: none !important;
   }
+  .ytp-svg-shadow {
+    stroke-opacity: 0.5 !important;
+  }
   .ytp-timed-markers-container,
   .ytp-chapter-hover-container.ytp-exp-chapter-hover-container,
   .ytp-volume-slider-handle {
-    box-shadow: 0 0 2px rgba(0,0,0,.5);
+    box-shadow: 0 0 2px rgba(0,0,0,1);
+  }
+  .ytp-volume-slider-handle {
+    background-color: rgb(255, 255, 255) !important;
+  }
+  .ytp-volume-slider-handle::before {
+    box-shadow: 0 0 2px rgba(0,0,0,1);
+    z-index: -1;
   }
   .ytp-time-wrapper,
   .ytp-chapter-title-content {
+    color: white !important;
+    font-weight: 700;
     text-shadow: 0 0 2px rgba(0,0,0,1) !important;
+    background-color: rgba(0,0,0,0.7);
+    padding: 0 0.3em;
   }
   /* Hide shorts from sidebar */
   ytd-reel-shelf-renderer {
